--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@octokit/rest": "^17.0.1",
     "commander": "^6.2.0",
     "csv-writer": "^1.6.0",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.11",
     "module-alias": "^2.2.2"
